[gd_scene load_steps=4 format=3 uid="uid://b4ychygfrwjvs"]

[ext_resource type="Theme" uid="uid://bewn6sinpr4as" path="res://Temp Dev Stuff/KenneyUI/kenneyUI-blue.tres" id="1_ga1o2"]
[ext_resource type="Script" path="res://Scripts/UI Scripts/stem_control_panel.gd" id="2_2wxqv"]
[ext_resource type="Texture2D" uid="uid://ci8fh70i31uk4" path="res://Temp Dev Stuff/slider_bar.png" id="3_am7qs"]

[node name="SliderPanelPrefab" type="Panel"]
custom_minimum_size = Vector2(200, 80)
offset_right = 203.0
offset_bottom = 89.0
theme = ExtResource("1_ga1o2")
script = ExtResource("2_2wxqv")
title = "Stem"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 193.0
offset_bottom = 86.0

[node name="Top" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -15.5
offset_right = 89.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
text = "Slider"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -18.0
offset_right = 37.0
offset_bottom = 18.0
grow_vertical = 2
button_pressed = true

[node name="Bottom" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Bottom"]
visible = false
layout_mode = 0
offset_left = 60.0
offset_top = 18.0
offset_right = 289.0
offset_bottom = 25.0
scale = Vector2(0.5, 1)
texture = ExtResource("3_am7qs")

[node name="HSlider" type="HSlider" parent="VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -22.0
offset_right = 13.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 8
size_flags_vertical = 1
tick_count = 10
ticks_on_borders = true

[node name="NumberLabel" type="Label" parent="VBoxContainer/Bottom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -6.0
offset_right = 41.0
offset_bottom = 12.0
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="VBoxContainer/Top/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="drag_ended" from="VBoxContainer/Bottom/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/Bottom/HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="VBoxContainer/Bottom/HSlider" to="." method="_on_h_slider_value_changed"]
